fix 2k warnings